--- a/values.yml
+++ b/values.yml
@@ -67,8 +67,8 @@ priorityClassName: ""
 ## AccessKey and secretKey is generated when not set
 ## Distributed Minio ref: https://docs.minio.io/docs/distributed-minio-quickstart-guide
 ##
-accessKey: "admin"
-secretKey: "admin"
+accessKey: "adminadminadmin"
+secretKey: "adminadminadmin"
 certsPath: "/etc/minio/certs/"
 configPathmc: "/etc/minio/mc/"
 mountPath: "/export"
